# jax_mppi

./: .gitignore  .gitmodules  .markdownlint-cli2.yaml  .nojekyll  404.html  AUTOTUNING_SUMMARY.md  CHANGELOG.md  CMakeLists.txt  PUBLISHING.md  README.md  RELEASE.html  autotuning.html  compile_commands.json  debug_noise.py  i_mppi.html  i_mppi_ugv_architecture_plan.html  index.html  justfile  mkdocs.yml  objects.inv  pixi.toml  pyproject.toml  releasing.html  robots.txt  search.json  sitemap.xml  testing.html  theory.html
.github/: RELEASE_CHECKLIST.md
.github/workflows/: docs.yml  lint.yml  publish-pypi.yml  publish.yml  ros_lint.yml  test.yml
.jules/: bolt.md
api/: autotune.html  autotune_global.html  autotune_qd.html  kmppi.html  mppi.html  smppi.html  types.html
api/autotune/: index.html
api/autotune_global/: index.html
api/autotune_qd/: index.html
api/kmppi/: index.html
api/mppi/: index.html
api/smppi/: index.html
api/types/: index.html
autotuning/: index.html
docs/: .gitignore  .markdownlint-cli2.yaml  .markdownlint-custom-rules.js  .markdownlint-fix.js  RELEASE.md  _quarto.yml  autotuning.md  autotuning.qmd  i_mppi.qmd  i_mppi_ugv_architecture_plan.md  index.md  index.qmd  performance_analysis.md  releasing.md  testing.md  theory.md
docs/api/: autotune.md  autotune_global.md  autotune_qd.md  kmppi.md  mppi.md  smppi.md  types.md
docs/examples/: env_setup.py  i_mppi_interactive_simulation.ipynb  pendulum.md  quadrotor.md  sim_utils.py  viz_utils.py
docs/plan/: cuda_imppi_bugfixes.md  cuda_imppi_test_results.md  cuda_mppi_implementation.md  cuda_mppi_submodule_plan.md  evosax_integration.md  example_performance_investigation.md  fsm_i_exploration.md  i_mppi_architecture_alignment.md  index.md  issue_31_visualization_exploration.md  parallel_imppi_architecture.md  parallel_trajectory_ig.md  performance_analysis.md  porting_pytorch_jax.md  quadrotor_trajectory_following.md
docs/plan/completed/: cuda_mppi_implementation.md  cuda_mppi_submodule_plan.md  evosax_integration.md  move_i_mppi_to_src.md
docs/scripts/: lint_math_blocks.py
docs/src/: api_reference.qmd  autotuning.qmd  dynamics.qmd  i_mppi.qmd  quadrotor.qmd  references.bib  theory.qmd
docs/stylesheets/: extra.css
examples/: README.md  autotune_basic.py  autotune_evosax_comparison.py  autotune_pendulum.py  cuda_pendulum_jit.py  i_mppi_interactive_simulation.html  i_mppi_simulation.py  pendulum.html  pendulum.py  quadrotor_circle.py  quadrotor_custom_trajectory.py  quadrotor_figure8_comparison.py  quadrotor_hover.py  quadrotor_hover_comparison.py  smooth_comparison.py  test_cuda_config.py
examples/autotuning/: README.md  basic.py  evosax_comparison.py  pendulum.py
examples/basic/: README.md  pendulum.py
examples/benchmarks/: README.md  smooth_comparison.py
examples/cuda/: README.md  pendulum_jit.py  test_cuda_bindings.py  test_cuda_config.py  test_cuda_mppi.py
examples/i_mppi/: README.md  debug_fsmi_field.py  fsmi_grid_demo.py  i_mppi_cuda_simulation.py  i_mppi_interactive_simulation.ipynb  i_mppi_parallel_simulation.py  i_mppi_simulation.py  i_mppi_simulation_legacy.py  sim_utils.py  simulation.py  viz_utils.py
examples/i_mppi_modules/: environment.py  fsmi.py  planner.py
examples/i_mppi_ugv/: i_mppi_ugv_simulation.py  ugv_sim_utils.py
examples/pendulum/: index.html
examples/quadrotor/: README.md  __init__.py  circle.py  custom_trajectory.py  figure8.py  figure8_comparison.py  hover.py  hover_comparison.py  trajectories.py
plan/: cuda_imppi_bugfixes.html  cuda_imppi_test_results.html  example_performance_investigation.html  fsm_i_exploration.html  i_mppi_architecture_alignment.html  index.html  issue_31_visualization_exploration.html  parallel_imppi_architecture.html  parallel_trajectory_ig.html  performance_analysis.html  quadrotor_trajectory_following.html
plan/completed/: cuda_mppi_implementation.html  cuda_mppi_submodule_plan.html  evosax_integration.html  move_i_mppi_to_src.html  porting_pytorch_jax.html
plan/completed/evosax_integration/: index.html
plan/completed/porting_pytorch_jax/: index.html
plan/example_performance_investigation/: index.html
plan/performance_analysis/: index.html
plan/quadrotor_trajectory_following/: index.html
releasing/: index.html
scripts/: format_cpp.sh  prepare_release.py
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
site/api/kmppi/: index.html
site/api/mppi/: index.html
site/api/smppi/: index.html
site/api/types/: index.html
site/examples/pendulum/: index.html
site/plan/porting_pytorch_jax/: index.html
site/search/: search_index.json
site_libs/bootstrap/: bootstrap-0b802d246790ecd80511443f8ae76f95.min.css  bootstrap-185758d5a34697737532308e7a8d5b83.min.css
src/: dynamics.html  i_mppi.html  theory.html
src/cuda_mppi/: CMakeLists.txt
src/cuda_mppi/bindings/: bindings.cpp  bindings.cu
src/cuda_mppi/include/mppi/controllers/: jit_mppi.hpp  kmppi.cuh  mppi.cuh  smppi.cuh
src/cuda_mppi/include/mppi/core/: kernels.cuh  mppi_common.cuh
src/cuda_mppi/include/mppi/instantiations/: double_integrator.cuh
src/cuda_mppi/include/mppi/jit/: examples.hpp  jit_compiler.hpp  jit_utils.h
src/cuda_mppi/include/mppi/utils/: cuda_utils.cuh
src/cuda_mppi/src/: main_test.cu
src/cuda_mppi/src/jit/: jit_compiler.cpp  jit_mppi_controller.cpp
src/jax_mppi/: __init__.py  autotune.py  autotune_evosax.py  autotune_global.py  autotune_qd.py  kmppi.py  mppi.py  smppi.py  types.py
src/jax_mppi/costs/: __init__.py  basic.py  quadrotor.py
src/jax_mppi/dynamics/: __init__.py  linear.py  quadrotor.py  ugv.py
src/jax_mppi/i_mppi/: __init__.py  environment.py  fsmi.py  fsmi.py.tmp  (+3 more)
testing/: index.html
tests/: test_autotune.py  test_autotune_evosax.py  test_autotune_integration.py  test_benchmarks.py  test_fsmi.py  test_i_mppi_environment.py  test_kmppi.py  test_mppi.py  test_pendulum.py  test_quadrotor_advanced_examples.py  test_quadrotor_costs.py  test_quadrotor_dynamics.py  test_quadrotor_examples.py  test_quadrotor_trajectories.py  test_smppi.py
theory/: index.html
