[project]
name = "jax-mppi"
version = "0.1.0"
description = "JAX implementation of Model Predictive Path Integral (MPPI) control"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "Riccardo Enrico"}]
keywords = ["jax", "mppi", "model-predictive-control", "robotics", "optimal-control", "trajectory-optimization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "jax[cuda13]",
    "numpy",
    "jaxtyping",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "gymnasium[classic_control]",
    "matplotlib",
    "basedpyright",
    "ruff",
    "cma>=3.3.0",  # CMA-ES for autotuning
    "ray[tune]>=2.0.0",  # Ray Tune for global search
    "hyperopt>=0.2.7",  # HyperOpt search algorithm
    "bayesian-optimization>=1.4.0",  # BayesOpt search algorithm
    "ribs[all]>=0.6.0",  # CMA-ME quality diversity
]
docs = [
    "mkdocs-material",
    "mkdocstrings[python]",
]
autotuning = [
    "cma>=3.3.0",  # CMA-ES optimizer (core autotuning)
    # Additional optimizers (install separately if needed):
    # ray[tune]>=2.0.0
    # hyperopt>=0.2.7
    # bayesian-optimization>=1.4.0
    # ribs[all]>=0.6.0
]

[project.urls]
Homepage = "https://github.com/riccardo-enr/jax_mppi"
Repository = "https://github.com/riccardo-enr/jax_mppi"
Documentation = "https://riccardo-enr.github.io/jax_mppi/"
"Bug Tracker" = "https://github.com/riccardo-enr/jax_mppi/issues"

[tool.ruff]
line-length = 80
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"src/jax_mppi/costs/basic.py" = ["F722", "F821"]
"src/jax_mppi/dynamics/linear.py" = ["F722", "F821"]
"src/jax_mppi/kmppi.py" = ["E402"]
"src/jax_mppi/smppi.py" = ["E402"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# Setup for Python module
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
